--- a/pages/restaurants/restaurant_browse.html
+++ b/pages/restaurants/restaurant_browse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browse Restaurants - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
   
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -40,9 +40,9 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="restaurant_browse.html" class="text-primary font-medium border-b-2 border-primary pb-1">Browse</a>
-                    <a href="shopping_cart.html" class="text-text-secondary hover:text-primary transition-smooth">Cart</a>
-                    <a href="order_history.html" class="text-text-secondary hover:text-primary transition-smooth">Orders</a>
-                    <a href="customer_profile.html" class="text-text-secondary hover:text-primary transition-smooth">Account</a>
+                    <a href="../customers/shopping_cart.html" class="text-text-secondary hover:text-primary transition-smooth">Cart</a>
+                    <a href="../customers/order_history.html" class="text-text-secondary hover:text-primary transition-smooth">Orders</a>
+                    <a href="../customers/customer_profile.html" class="text-text-secondary hover:text-primary transition-smooth">Account</a>
                 </nav>
 
                 <!-- Cart Icon & User Profile -->
@@ -611,7 +611,7 @@
                 </svg>
                 <span class="text-xs font-medium text-primary">Browse</span>
             </a>
-            <a href="shopping_cart.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors relative">
+            <a href="../customers/shopping_cart.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors relative">
                 <div class="relative">
                     <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.5 6M7 13l-1.5 6m0 0h9M17 21a2 2 0 100-4 2 2 0 000 4zM9 21a2 2 0 100-4 2 2 0 000 4z"/>
@@ -620,13 +620,13 @@
                 </div>
                 <span class="text-xs font-medium text-text-secondary">Cart</span>
             </a>
-            <a href="order_history.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
+            <a href="../customers/order_history.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
                 <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/>
                 </svg>
                 <span class="text-xs font-medium text-text-secondary">Orders</span>
             </a>
-            <a href="customer_profile.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
+            <a href="../customers/customer_profile.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
                 <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
                 </svg>
@@ -648,6 +648,6 @@
             </div>
         </div>
     </footer>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
