--- a/pages/admin/admin_login.html
+++ b/pages/admin/admin_login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/pages.css">
 
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -28,7 +28,7 @@
 
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
-                    <a href="restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">For Customers</a>
+                    <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">For Customers</a>
                     <a href="admin_login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Admin Login</a>
                 </nav>
             </div>
@@ -110,14 +110,14 @@
 
             <!-- Customer Login Link -->
             <div class="text-center mt-6">
-                <a href="customer_login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
+                <a href="../customers/customer_login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
                     Are you a customer? Sign in here
                 </a>
             </div>
 
             <!-- Restaurant Login Link -->
             <div class="text-center mt-4">
-                <a href="restaurant_login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
+                <a href="../restaurants/restaurant_login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
                     Restaurant login
                 </a>
             </div>
@@ -203,6 +203,6 @@
             });
         });
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
