--- a/pages/admin/admin_orders.html
+++ b/pages/admin/admin_orders.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Management - HATOD Admin</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/pages.css">
 
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -310,6 +310,145 @@
                 </div>
             </div>
         </div>
+
+        <!-- Rider Deliveries Section -->
+        <section class="mt-12">
+            <div class="bg-surface rounded-lg shadow-card border border-border">
+                <div class="p-6 border-b border-border">
+                    <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between">
+                        <div>
+                            <h3 class="text-lg font-semibold text-text-primary">Rider Deliveries</h3>
+                            <p class="text-text-secondary text-sm mt-1">Monitor active deliveries by riders</p>
+                        </div>
+                        <div class="flex items-center space-x-4 mt-4 sm:mt-0">
+                            <select class="border border-border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent">
+                                <option>All Riders</option>
+                                <option>John Rider</option>
+                                <option>Sarah Delivery</option>
+                                <option>Mike Express</option>
+                            </select>
+                            <button class="flex items-center space-x-2 text-primary hover:text-primary-600 transition-smooth">
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
+                                </svg>
+                                <span class="text-sm">Refresh</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Rider Deliveries Table -->
+                <div class="overflow-x-auto">
+                    <table class="w-full">
+                        <thead class="bg-gray-50">
+                            <tr>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Rider</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Order ID</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Customer</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Restaurant</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Status</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Pickup Time</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-text-secondary uppercase tracking-wider">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-surface divide-y divide-border">
+                            <tr class="hover:bg-gray-50 transition-smooth">
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <img src="https://img.rocket.new/generatedImages/rocket_gen_img_18511f091-1762273782119.png"
+                                             alt="Rider profile"
+                                             class="w-8 h-8 rounded-full object-cover mr-3"
+                                             onerror="this.src='https://images.unsplash.com/photo-1584824486509-112e4181ff6b?q=80&w=2940&auto=format&fit/crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'; this.onerror=null;">
+                                        <div>
+                                            <div class="text-sm font-medium text-text-primary">John Rider</div>
+                                            <div class="text-sm text-text-secondary">4.9 ★</div>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-text-primary">#ORD-2024-001</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="text-sm text-text-primary">Sarah Johnson</div>
+                                    <div class="text-sm text-text-secondary">123 Main St</div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary">Pizza Palace</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-primary-100 text-primary-600">Out for Delivery</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">2:45 PM</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                    <div class="flex gap-2">
+                                        <button class="text-primary hover:text-primary-600 transition-smooth">Track</button>
+                                        <button class="text-warning hover:text-warning-600 transition-smooth">Contact</button>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="hover:bg-gray-50 transition-smooth">
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=2940&auto=format&fit/crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                             alt="Rider profile"
+                                             class="w-8 h-8 rounded-full object-cover mr-3"
+                                             onerror="this.src='https://images.unsplash.com/photo-1584824486509-112e4181ff6b?q=80&w=2940&auto=format&fit/crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'; this.onerror=null;">
+                                        <div>
+                                            <div class="text-sm font-medium text-text-primary">Sarah Delivery</div>
+                                            <div class="text-sm text-text-secondary">4.7 ★</div>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-text-primary">#ORD-2024-002</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="text-sm text-text-primary">Mike Chen</div>
+                                    <div class="text-sm text-text-secondary">789 Oak St</div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary">Burger Barn</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-success-100 text-success-600">Picked Up</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">2:30 PM</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                    <div class="flex gap-2">
+                                        <button class="text-primary hover:text-primary-600 transition-smooth">Track</button>
+                                        <button class="text-warning hover:text-warning-600 transition-smooth">Contact</button>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="hover:bg-gray-50 transition-smooth">
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="flex items-center">
+                                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?q=80&w=2940&auto=format&fit/crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                             alt="Rider profile"
+                                             class="w-8 h-8 rounded-full object-cover mr-3"
+                                             onerror="this.src='https://images.unsplash.com/photo-1584824486509-112e4181ff6b?q=80&w=2940&auto=format&fit/crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'; this.onerror=null;">
+                                        <div>
+                                            <div class="text-sm font-medium text-text-primary">Mike Express</div>
+                                            <div class="text-sm text-text-secondary">4.8 ★</div>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-text-primary">#ORD-2024-003</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="text-sm text-text-primary">Emma Davis</div>
+                                    <div class="text-sm text-text-secondary">567 Pine St</div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary">Sushi Spot</td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-warning-100 text-warning-600">Assigned</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">2:15 PM</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                    <div class="flex gap-2">
+                                        <button class="text-primary hover:text-primary-600 transition-smooth">Track</button>
+                                        <button class="text-error hover:text-error-600 transition-smooth">Reassign</button>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Mobile Bottom Tab Navigation -->
@@ -355,6 +494,6 @@
             </div>
         </div>
     </footer>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
