--- a/pages/customers/customer_login.html
+++ b/pages/customers/customer_login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Login - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/pages.css">
   
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -28,7 +28,7 @@
 
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
-                    <a href="restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse Restaurants</a>
+                    <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse Restaurants</a>
                     <a href="customer_login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Sign In</a>
                 </nav>
 
@@ -223,12 +223,12 @@
 
                     // Simulate API call
                     setTimeout(() => {
-                        window.location.href = 'restaurant_browse.html';
+                        window.location.href = '../restaurants/restaurant_browse.html';
                     }, 1500);
                 }
             });
         });
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
