--- a/pages/customers/customer_registration.html
+++ b/pages/customers/customer_registration.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Registration - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/pages.css">
   
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -26,7 +26,7 @@
 
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
-                    <a href="restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse Restaurants</a>
+                    <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse Restaurants</a>
                     <a href="order_tracking.html" class="text-text-secondary hover:text-primary transition-smooth">Track Orders</a>
                     <a href="customer_registration.html" class="text-primary font-medium border-b-2 border-primary pb-1">Sign Up</a>
                 </nav>
@@ -284,7 +284,7 @@
                         </div>
                         <h3 class="text-lg font-medium text-text-primary mb-2">Account Created Successfully!</h3>
                         <p class="text-text-secondary mb-4">Welcome to HATOD! You can now start ordering from your favorite restaurants.</p>
-                        <a href="restaurant_browse.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
+                        <a href="../restaurants/restaurant_browse.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                             Start Browsing Restaurants
                             <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -546,6 +546,6 @@
             }
         });
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
