--- a/pages/customers/payment_confirmation.html
+++ b/pages/customers/payment_confirmation.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Confirmed - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/pages.css">
   
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -17,7 +17,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <a href="restaurant_browse.html" class="flex items-center">
+                    <a href="../restaurants/restaurant_browse.html" class="flex items-center">
                         <svg class="w-8 h-8 text-primary mr-3" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 2L13.09 8.26L22 9L13.09 9.74L12 16L10.91 9.74L2 9L10.91 8.26L12 2Z"/>
                             <path d="M12 16L13.09 22.26L22 23L13.09 23.74L12 30L10.91 23.74L2 23L10.91 22.26L12 16Z" opacity="0.6"/>
@@ -149,7 +149,7 @@
 
         <!-- Continue Shopping -->
         <div class="text-center">
-            <a href="restaurant_browse.html" class="text-primary hover:text-primary-600 transition-smooth font-medium">
+            <a href="../restaurants/restaurant_browse.html" class="text-primary hover:text-primary-600 transition-smooth font-medium">
                 Continue Shopping →
             </a>
         </div>
@@ -168,6 +168,6 @@
             </div>
         </div>
     </footer>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
