--- a/pages/customers/shopping_cart.html
+++ b/pages/customers/shopping_cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
   
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -26,7 +26,7 @@
 
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
-                    <a href="restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse</a>
+                    <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse</a>
                     <a href="shopping_cart.html" class="text-primary font-medium border-b-2 border-primary pb-1">Cart</a>
                     <a href="order_history.html" class="text-text-secondary hover:text-primary transition-smooth">Orders</a>
                     <a href="customer_profile.html" class="text-text-secondary hover:text-primary transition-smooth">Account</a>
@@ -56,7 +56,7 @@
         <!-- Page Header -->
         <div class="mb-8">
             <div class="flex items-center space-x-2 text-text-secondary text-sm mb-2">
-                <a href="restaurant_browse.html" class="hover:text-primary transition-smooth">Browse Restaurants</a>
+                <a href="../restaurants/restaurant_browse.html" class="hover:text-primary transition-smooth">Browse Restaurants</a>
                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                 </svg>
@@ -245,7 +245,7 @@
 
                 <!-- Continue Shopping -->
                 <div class="mt-6">
-                    <a href="restaurant_browse.html" class="inline-flex items-center space-x-2 text-primary hover:text-primary-600 transition-smooth">
+                    <a href="../restaurants/restaurant_browse.html" class="inline-flex items-center space-x-2 text-primary hover:text-primary-600 transition-smooth">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
                         </svg>
@@ -365,7 +365,7 @@
     <!-- Mobile Bottom Tab Navigation -->
     <nav class="lg:hidden fixed bottom-0 left-0 right-0 bg-surface border-t border-border shadow-lg z-50">
         <div class="flex items-center justify-around py-2 px-4">
-            <a href="restaurant_browse.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
+            <a href="../restaurants/restaurant_browse.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
                 <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
                 </svg>
@@ -415,6 +415,6 @@
             console.log('Toggle mobile summary');
         }
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
