--- a/pages/restaurants/restaurant_menu.html
+++ b/pages/restaurants/restaurant_menu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Palace - Menu - HATOD</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/pages.css">
   
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Frestaurant2067back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
@@ -29,13 +29,13 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse</a>
-                    <a href="shopping_cart.html" class="text-text-secondary hover:text-primary transition-smooth relative">
+                    <a href="../customers/shopping_cart.html" class="text-text-secondary hover:text-primary transition-smooth relative">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.5 6M7 13l-1.5 6m0 0h9M17 21a2 2 0 100-4 2 2 0 000 4zM9 21a2 2 0 100-4 2 2 0 000 4z"/>
                         </svg>
                         <span class="absolute -top-2 -right-2 bg-primary text-white text-xs rounded-full h-5 w-5 flex items-center justify-center">3</span>
                     </a>
-                    <a href="order_tracking.html" class="text-text-secondary hover:text-primary transition-smooth">Orders</a>
+                    <a href="../customers/order_tracking.html" class="text-text-secondary hover:text-primary transition-smooth">Orders</a>
                     <div class="flex items-center space-x-2">
                         <img src="https://img.rocket.new/generatedImages/rocket_gen_img_1dd39b079-1762274356948.png" 
                              alt="Customer profile picture" 
@@ -108,7 +108,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
                         </svg>
                     </button>
-                    <a href="shopping_cart.html" class="hidden sm:block px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
+                    <a href="../customers/shopping_cart.html" class="hidden sm:block px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                         View Cart (3)
                     </a>
                 </div>
@@ -309,7 +309,7 @@
 
     <!-- Mobile Cart Button (Fixed Bottom) -->
     <div class="lg:hidden fixed bottom-0 left-0 right-0 bg-surface border-t border-border shadow-lg p-4">
-        <a href="shopping_cart.html" class="flex items-center justify-between bg-primary text-white rounded-lg px-4 py-3 hover:bg-primary-600 transition-smooth btn-hover">
+        <a href="../customers/shopping_cart.html" class="flex items-center justify-between bg-primary text-white rounded-lg px-4 py-3 hover:bg-primary-600 transition-smooth btn-hover">
             <div class="flex items-center space-x-2">
                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.5 6M7 13l-1.5 6m0 0h9M17 21a2 2 0 100-4 2 2 0 000 4zM9 21a2 2 0 100-4 2 2 0 000 4z"/>
@@ -330,7 +330,7 @@
                 </svg>
                 <span class="text-xs font-medium text-text-secondary">Browse</span>
             </a>
-            <a href="shopping_cart.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors relative">
+            <a href="../customers/shopping_cart.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors relative">
                 <div class="relative">
                     <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4m0 0L7 13m0 0l-1.5 6M7 13l-1.5 6m0 0h9M17 21a2 2 0 100-4 2 2 0 000 4zM9 21a2 2 0 100-4 2 2 0 000 4z"/>
@@ -339,13 +339,13 @@
                 </div>
                 <span class="text-xs font-medium text-text-secondary">Cart</span>
             </a>
-            <a href="order_history.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
+            <a href="../customers/order_history.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
                 <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/>
                 </svg>
                 <span class="text-xs font-medium text-text-secondary">Orders</span>
             </a>
-            <a href="customer_profile.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
+            <a href="../customers/customer_profile.html" class="flex flex-col items-center space-y-1 p-2 rounded-lg transition-colors">
                 <svg class="w-6 h-6 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
                 </svg>
@@ -388,6 +388,6 @@
             console.log('Added to cart:', itemName, itemPrice);
         }
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../../public/dhws-data-injector.js"></script>
 </body>
 </html>
